# jalla-research

./: README.md
muon-comparison/: .taskignore  AGENTS.md  README.md  Taskfile.yaml  codebook.toml  pyproject.toml
muon-comparison/presentation/: main.typ
muon-comparison/src/: main.py  model.py  trainer.py  utils.py
