[project]
name = "muon"
version = "0.1.0"
description = "Muon optimizer exploration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
